test/error/no_compat_sub.gw
int i[4];
Object o;
i[o];
